# stratos-bar

./: .gitignore  .tool-versions  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  build_appimage.sh  index.html  package-lock.json  package.json  vite.config.js  vitest.config.ts
.github/workflows/: release.yml  test.yml
pkg/arch/: PKGBUILD  install.sh
pkg/stratos-bar/: .BUILDINFO  .MTREE  .PKGINFO
src/: App.vue  main.js  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/coverage/: tarpaulin-report.html
src-tauri/examples/: debug_icons.rs
src-tauri/src/: config.rs  lib.rs  main.rs  state.rs  tray.rs  utils.rs  window_manager.rs
src-tauri/src/adapters/: cached_icon_resolver.rs  file_history.rs  fs_app_repository.rs  fs_config_service.rs  google_translation_service.rs  http_ai_service.rs  linux_window_service.rs  mod.rs
src-tauri/src/commands/: ai.rs  apps.rs  config.rs  history.rs  mod.rs  scripts.rs  system.rs  translation.rs  windows.rs
src-tauri/src/domain/: action.rs  ai.rs  apps.rs  config.rs  mod.rs  translation.rs  windows.rs
src-tauri/src/ports/: ai_port.rs  app_port.rs  config_port.rs  history.rs  icon_port.rs  mod.rs  translation_port.rs  window_port.rs
src/adapters/: tauriBackend.js
src/components/: AiChat.vue  CurrencyResult.vue  Settings.vue
src/composables/: useAI.js  useFilePreview.js  useOmnibar.js  useScriptRunner.js
src/plugins/: vuetify.js
src/skills/: SkillManager.js  index.js
stratos-bar/: FETCH_HEAD  config  packed-refs
(+19 files in other folders)
