[package]
name = "stratos-bar"
version = "0.1.0"
edition = "2021"
description = "A sophisticated command palette for power users."
repository = "https://github.com/yourusername/stratos-bar"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stratos_bar_lib"

[dependencies]
arboard = "3"
async-trait = "0.1.89"
dirs = "5"
freedesktop-desktop-entry = "0.8.0"
futures-util = "0.3"
glob = "0.3.3"
image = "0.24"
ksni = "0.2.1"
linicon = "2.3.0"
open = "5"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1.1.0"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["full"] }
walkdir = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1
